# opsagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  flask_app.py  main.py  pyproject.toml  workflow_run.py  workflow_run_with_trace.py
deployment/: deploy_infra.sh  deploy_script.sh  simplified.bicep
doc/: azure-keyvault-integration.md  consolidation_plan.md  dynamic_workflow_plan.md  observability-thinking-stream.md  parallel_workflow_implementation.md  sse-thinking-stream.md  triage_agent_plan.md  ui_workflow_integration_plan.md
opsagent/: __init__.py  observability.py
opsagent/agents/: __init__.py  clarify_agent.py  dynamic_triage_agent.py  log_analytics_agent.py  review_agent.py  service_health_agent.py  servicenow_agent.py  triage_agent.py
opsagent/config/: clarify_agent.yaml  dynamic_triage_agent.yaml  log_analytics_agent.yaml  review_agent.yaml  service_health_agent.yaml  servicenow_agent.yaml  triage_agent.yaml
opsagent/tools/: __init__.py  log_analytics_tools.py  service_health_tools.py  servicenow_tools.py
opsagent/ui/: .gitignore  CLAUDE.md  Dockerfile  flask_app.py  pyproject.toml
opsagent/ui/app/static/: index.html  script.js  styles.css
opsagent/ui/app/storage/: __init__.py  local.py  manager.py  postgresql.py  redis.py
opsagent/ui/deployment/: simplified.bicep
opsagent/utils/: __init__.py  config_loader.py  keyvault.py  observability.py  settings.py
opsagent/workflows/: __init__.py  dynamic_workflow.py  triage_workflow.py
workflow_run/: workflow_run.py  workflow_run_devui.py  workflow_run_with_trace.py
