[project]
name = "opsagent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.15.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "redis>=5.0.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]


[tool.uv]
prerelease = "allow"
