[project]
name = "opsagent2"
version = "0.1.0"
description = "DAPE OpsAgent Manager - Operations agent system with Flask UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Agent Framework (Microsoft)
    "agent-framework>=1.0.0b251120",
    # Azure
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    # Flask UI
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
    # Storage backends
    "psycopg2-binary==2.9.9",
    "redis>=5.0.0",
    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]


[tool.uv]
prerelease = "allow"
